crystals added, spacing fixed for now

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
     background-image: url("../images/background-hexagon-1.png");
+    overflow: auto;
 }
 #game-title {
     font-weight: bold;
@@ -15,13 +16,16 @@ body {
     color: forestgreen;
     background-color: ivory;
     width: 30%;
-    height: 200px;
+    height: 350px;
     padding: 20px;
+    line-height: 2;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 #random-number {
     background-color: darkgreen;
-    width: 14%;
-    height: 100px;
+    width: 15%;
+    height: 80px;
     margin: 5px;
     padding: 5px;
     padding-bottom: 50px;
@@ -33,8 +37,23 @@ body {
     float: left;
     text-align: center;
     background-color: turquoise;
-    padding: 15px 0px;
-    margin: 5px;    
-    width: 8%;
+    padding: 15px 5px;
+    margin: 5px;
     height: 100px;
+    line-height: 2.5;
+}
+img {
+    width: 100px;
+    height: 100px;
+    float: left;
+    background-color: white;
+    margin: 5px;
+}
+#crystals {
+    position: relative;
+    top: 135px;
+    right: 335px;
+    margin: 5px;
+    width: 70%;
+    align-content: center;
 }
